Fix let's connect text contrast

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h2.intro {
 h2.lets-connect {
   font-family: "Poppins", sans-serif;
   font-variant-caps: all-petite-caps;
-  color: #7f8cff;
+  color: #4D5EFF;
   font-size: 25px;
   font-weight: 500;
   line-height: 24px;
